--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": [
-			"app/**",
-			"!!app/globals.css"
-		]
+		"includes": ["app/**", "!!app/globals.css"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -65,9 +62,7 @@
 	},
 	"overrides": [
 		{
-			"includes": [
-				"**/*.{js,jsx,mjs,ts,tsx,mts,cts}"
-			],
+			"includes": ["**/*.{js,jsx,mjs,ts,tsx,mts,cts}"],
 			"javascript": {
 				"globals": [
 					"onanimationend",
@@ -225,21 +220,13 @@
 			}
 		},
 		{
-			"includes": [
-				"**/*.ts",
-				"**/*.tsx"
-			],
+			"includes": ["**/*.ts", "**/*.tsx"],
 			"javascript": {
 				"globals": []
 			}
 		},
 		{
-			"includes": [
-				"**/*.ts",
-				"**/*.tsx",
-				"**/*.mts",
-				"**/*.cts"
-			],
+			"includes": ["**/*.ts", "**/*.tsx", "**/*.mts", "**/*.cts"],
 			"linter": {
 				"rules": {
 					"complexity": {
