--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@auth/core": "^0.34.3",
@@ -86,6 +87,7 @@
     "@vitest/ui": "^4.0.16",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.0.1",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
