--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
