--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
