--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next-auth": "^4.24.13",
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
